# InsidersBooks

./: .gitignore  README.md  pyproject.toml
src/insidersbooks/: database.py  main.py
src/insidersbooks/dependencies/: auth.py
src/insidersbooks/models/: __init__.py  book.py  comment.py  comment_reaction.py  rating.py  user.py
src/insidersbooks/routes/: auth.py  book.py  comment.py  comment_rating.py  rating.py
src/insidersbooks/schemas/: book.py  comment.py  comment_reaction.py  rating.py  user.py
